added fixed bottom nav

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
         <h1>Hello World</h1>
     </div>
 
+    <footer>
+        <nav class="navbar fixed-bottom navbar-light bg-light">
+            <div class="container-fluid">
+              <h4><i class="far fa-copyright"></i> Copyright 2021</h4>
+            </div>
+          </nav>
+    </footer>
+
 
     <!-- Javascript Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
