test for jquery ran fine

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
    
     <main class="container">
         <h1>Hello World</h1>
+        <button id="clickMeButton" class="btn btn-primary">Click me!</button>
     </main>
 
     <!--Footer Nav -->
